--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 /* Marca */
 #marca {
   height: 100px;
-  background: #9e9e9e;
+  background: #225992 url(imagem/cabecalho2.jpg) no-repeat center;
   text-align: center;
   line-height: 100px;
 }
