--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 #container {
   width: 90%; /* 720px */
   margin: 0 auto;
-  background: #f2f2f2;
+  background: #f2f2f2 url(imagem/coluna.png) repeat-y left top;
   min-width: 720px;
   max-width: 1200px;
 }
@@ -61,7 +61,7 @@ img.img-noticia {
   float: left;
   padding-top: 20px;
   padding-bottom: 20px;
-  background: #d1d1d1;
+
 }
 #navegacao ul {
   list-style: none;
@@ -70,9 +70,9 @@ img.img-noticia {
   text-decoration: none;
 }
 /* Rodapé */
-#rodape {
+#rodape p {
   clear: both;
   background: #c4c4c4;
-  padding: 5px;
+  padding: 20px;
   text-align: center;
 }
